--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   equatable: ^2.0.5
   dio: ^5.3.2
   http: ^1.1.0
+  sqflite: ^2.3.0
+  rxdart: ^0.27.7
+  path_provider: ^2.1.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
